--- a/bower.json
+++ b/bower.json
@@ -15,5 +15,10 @@
     "lodash": "~2.4.1",
     "restangular": "~1.4.0",
     "angular-ui-utils": "~0.1.1"
+  },
+  "devDependencies": {
+    "jasmine": "^2.3.2",
+    "jasmine-sinon": "^0.4.0",
+    "sinon": "^1.17.2"
   }
 }
