--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "gulp-uglify": "^0.2.1",
     "gulp-util": "^2.2.14",
     "gulp-watch": "^4.1.1",
-    "karma": "^0.12.31",
+    "jasmine": "^2.3.2",
+    "jasmine-sinon": "^0.4.0",
+    "karma": "^0.13.15",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "~0.1.2",
     "karma-coverage": "~0.2.0",
@@ -49,8 +51,9 @@
     "karma-jasmine": "~0.2.1",
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "~0.1.2",
+    "karma-sinon": "^1.0.4",
     "mocha": "^2.1.0",
     "should": "^5.1.0",
-    "supertest": "^0.15.0"
+    "sinon": "^1.17.2"
   }
 }
