--- a/package.json
+++ b/package.json
@@ -41,11 +41,14 @@
     "gulp-uglify": "^0.2.1",
     "gulp-util": "^2.2.14",
     "gulp-watch": "^4.1.1",
+    "jasmine": "^2.3.2",
+    "jasmine-core": "^2.3.4",
     "karma": "^0.13.15",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "~0.1.2",
     "karma-coverage": "~0.2.0",
     "karma-firefox-launcher": "~0.1.3",
+    "karma-jasmine": "^0.3.6",
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "~0.1.2",
     "karma-sinon": "^1.0.4",
