--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.2.0",
     "coffee-script": "^1.9.1",
+    "connect": "^3.4.0",
     "cookie-parser": "^1.1.0",
     "express": "~4.2.0",
     "express-session": "^1.2.1",
@@ -37,6 +38,7 @@
     "gulp-minify-css": "^0.5.1",
     "gulp-mocha": "^2.0.0",
     "gulp-nodemon": "~1.0.0",
+    "gulp-protractor": "^1.0.0",
     "gulp-stylus": "^2.0.1",
     "gulp-uglify": "^0.2.1",
     "gulp-util": "^2.2.14",
